fixup! feat(nav): support navbar on mobile

--- a/components/jumbotron/jumbotron.module.scss
+++ b/components/jumbotron/jumbotron.module.scss
@@ -6,7 +6,7 @@
   align-items: center;
   width: 100%;
   height: 50vh;
-  margin-top: 8vh;
+  margin-top: 7vh;
   background-color: $blue-dark;
 }
 
