--- a/components/nav/nav.module.scss
+++ b/components/nav/nav.module.scss
@@ -8,7 +8,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  z-index: 5;
+  z-index: 20;
+  border-bottom: 2px solid $highlight;
 
   svg {
     color: $blue-mid;
@@ -58,19 +59,42 @@
 
 .nav_mobile {
   @include nav_shared;
+
+  svg {
+    font-size: 2em;
+  }
 }
 
 .drawer {
   position: fixed;
-  height: 93vh;
+  // show bottom border of nav
+  height: calc( 93vh - 2px );
   width: 100vw;
   bottom: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  transition: bottom .2s ease-in-out;
+  transition: bottom .25s ease-in-out;
   background: $white;
+  z-index: -5;
+
+  .links {
+    height: 80%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .icons {
+    height: 20%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
   a {
     text-decoration: none;
@@ -79,9 +103,9 @@
     padding: 1em;
     color: $blue-mid;
   }
-}
 
-.drawer_open {
-  bottom: 0;
-  z-index: 10;
+  &.drawer_open {
+    bottom: 0;
+    z-index: -5;
+  }
 }
